--- a/ss/intext.html
+++ b/ss/intext.html
@@ -80,7 +80,32 @@
             </div>,
             document.getElementById('a1')
           );
+       </script>
 
+
+       <div id="q3"></div>
+       <script type="text/babel">
+          var LikeButton=React.createClass({
+            getInitialState:function(){
+              return {liked:true};
+            },
+            handleClick:function(event){
+              this.setState({liked:!this.state,liked});
+            },
+            render:function(){
+              var text=this.state.liked ? 'like' :'haven\'t liked';
+              return(
+                <p onClick={this.handleClick}>
+                    You {text} this.Click to toggle.
+                </p>
+              );
+            }
+          });
+
+          ReactDOM.render(
+            <LikeButton />,
+            document.getElementById('q3')
+          );
        </script>
 
   </body>
