--- a/ss/two.html
+++ b/ss/two.html
@@ -10,8 +10,11 @@
 
     <div id="d2"></div>
     <script type="text/babel">
+      var myStyle={
+        color:'red'
+      };
       ReactDOM.render(
-        <h1>Hello, world!</h1>,
+        <h1 style={myStyle}>Hello, world!</h1>,
         document.getElementById('d2')
       );
     </script>
